--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,13 @@ body {
     height: 100vh;
     display: flex;
 }
+
+.column {
+    border: 1px solid black;
+    flex: 1;
+    background: rgb(182, 176, 176);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
