--- a/styles.css
+++ b/styles.css
@@ -20,3 +20,21 @@ body {
     justify-content: space-around;
     align-items: center;
 }
+
+.column h2 {
+    padding: 10px;
+    color: #fff;
+    border-radius: 10px;
+    transition: background 0.3s;
+
+}
+
+.column h2:hover {
+    background: rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.column button {
+    border: none;
+    background: transparent;
+}
